@@ -1,0 +1,3 @@
+EBUILD xonotic-data-9999.ebuild 3132 RMD160 d3055bfae6c5b31b2dcb31cebce2425431342ad7 SHA1 2105f8513be551dcdd892b27db27fe0c1892afd2 SHA256 bfe1665159a1e4b6728b1bd5e4ed5c82d05f2bdb7eba6a3de32611fe0f18ab62
+MISC ChangeLog 262 RMD160 51e22029be52a9b81c7e6162cf5a7ed166471a43 SHA1 116eaa1db6c7d10cce6e99e2b136f0b4133bf6b5 SHA256 eeaa809356bbf326814be955dd8f76ee9bb484a5f3cd278d64879c365a1ec24e
+MISC metadata.xml 464 RMD160 86d7fbea6edcba6452d3581044ca1a1a77239da5 SHA1 4615957949527226200e033661405ed8459f498d SHA256 d9a07557c99e4b12bafbb7f547ee63cf6d9931e4a8a47e2a5a5bbefc89097af2
