@@ -1,5 +1,5 @@
 DIST xonotic-0.1.0preview.zip 1386789859 RMD160 abcf512141e9aab970ff0a91c0c0d02ac8a3b4b9 SHA1 debda2b012e6cf423fe61435f02226746fdaf9fb SHA256 7f86a9e87d050cc490fb15e3e27142a8c2522ad84907d78dadc294bf7a687b0d
-EBUILD xonotic-0.1.0_pre.ebuild 3197 RMD160 0eff02d0edd3a9d2a9e44c50e915d6c9ebe2d008 SHA1 bf2a83a4fcd3865200a4e52789a2c4459fc38665 SHA256 4e1e7c51ad9a16666ddc46fe12ae063344bcf56dca1155601286dc88cf90e0ff
-EBUILD xonotic-9999.ebuild 5589 RMD160 465b28a5bb33f0af5a62775d5d91b404cac9799b SHA1 88ab3834e51e5627d99dd52a468a50bd723f6f2e SHA256 53760f50020e1c0c4992085c3fb88f56e348658de6365ee43c774dbf92da1241
-MISC ChangeLog 458 RMD160 ce0da0586438b4e574253486edb04a13869dcaef SHA1 cd201fb67f29327b341f55f55a6c899b980b12ac SHA256 70eb358cab715a5cf20407b898fef702fd59aa15b1fe58e8e402ffad063c13ff
-MISC metadata.xml 382 RMD160 3a5b38975546b50b1fbfb58cd5f6276111a710ad SHA1 4fddf5a266a9230d87903d9af0b8e7e440405dbe SHA256 b54470095e0eb93c37d24cd10c7cd6ba9d13124500e134b2cee9a8804c66366c
+EBUILD xonotic-0.1.0_pre.ebuild 3193 RMD160 7e06ad6af4895ad5b6e66c6c882577d74d3e2bf9 SHA1 cbb4886f7d58e686aad6a270f59830269c4736b5 SHA256 d27d8411f2446733c17a4365b5574eff1364127c24f01dfa6d1806ae21e79d2d
+EBUILD xonotic-9999.ebuild 3131 RMD160 b3bde10c81adf4d524cd6eea2c29ab26ddf052f4 SHA1 9d77c61bc9d293778703efca00f9975504576f99 SHA256 804d2432faf6dfac9740bf2aeee2b250363c7eb708b151297b2c2b5784e5d199
+MISC ChangeLog 613 RMD160 257b6b87ecacfa69baa674c10cd383b7ef73ef8d SHA1 223e1c7ea75a8939f02ffdf77c33e9655adb3c51 SHA256 df6cfffe3dcef960da698651d67be3bb070b28d6813e1b936c5fd27386f1fc24
+MISC metadata.xml 246 RMD160 fe65f53ca2aa31f6d8c4fc4ee289e6c67b53441f SHA1 15de876352ad307fca2fd3468eab43bf327ac848 SHA256 9ff4ee44fd0e30e11a2fc610b39ff825cc265c0ee045c18c1a5873e7b579f6e6
