@@ -1,0 +1,10 @@
+# ChangeLog for games-fps/xonotic-data
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*xonotic-data-9999 (17 Jan 2011)
+
+  17 Jan 2011; Nikoli <nikoli@lavabit.com> +xonotic-data-9999.ebuild,
+  +metadata.xml:
+  initial ebuild
+
