@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Jan 2011; Nikoli <nikoli@lavabit.com> xonotic-0.1.0_pre.ebuild,
+  xonotic-9999.ebuild, metadata.xml:
+  move *.pk3 to xonotic-data package, cosmetics
+
   01 Jan 2011; Nikoli <nikoli@lavabit.com> xonotic-9999.ebuild:
   fix live ebuild
 
